--- a/pkgdown.css
+++ b/pkgdown.css
@@ -247,7 +247,7 @@ Nivo Slider v2.7.1 by Gilbert Pellegrom - http://nivo.dev7studios.com/
 */
 
 /* Additional classes */
-.shadow{background:url(figures/shadow.png) top center no-repeat;}
+.shadow{background:url(images/shadow.png) top center no-repeat;}
 .clear{clear:both;}
 .left{float:left;}
 .right{float:right;}
@@ -283,13 +283,13 @@ Version: 1.0
 Author: Gilbert Pellegrom (modified by Andreas Viklund)
 Author URI: http://dev7studios.com
 */
-.slider-wrapper .nivoSlider{position:relative;height:300px;background:#fafafa url(figures/loading.gif) no-repeat 50% 50%;margin-bottom:55px;}
+.slider-wrapper .nivoSlider{position:relative;height:300px;background:#fafafa url(images/loading.gif) no-repeat 50% 50%;margin-bottom:55px;}
 .slider-wrapper .nivoSlider img{position:absolute;top:0;left:0;display:none;}
 .slider-wrapper .nivoSlider a{border:0;display:block;}
 .slider-wrapper .nivo-controlNav{position:absolute;left:50%;bottom:-41px;margin-left:-60px;/* Tweak this to center bullets */}
-.slider-wrapper .nivo-controlNav a{display:block;width:22px;height:22px;background:url(figures/bullets.png) no-repeat;text-indent:-9999px;border:0;margin-right:3px;float:left;}
+.slider-wrapper .nivo-controlNav a{display:block;width:22px;height:22px;background:url(images/bullets.png) no-repeat;text-indent:-9999px;border:0;margin-right:3px;float:left;}
 .slider-wrapper .nivo-controlNav a.active{background-position:0 -22px;}
-.slider-wrapper .nivo-directionNav a{display:block;width:30px;height:30px;background:url(figures/arrows.png) no-repeat;text-indent:-9999px;border:0;}
+.slider-wrapper .nivo-directionNav a{display:block;width:30px;height:30px;background:url(images/arrows.png) no-repeat;text-indent:-9999px;border:0;}
 .slider-wrapper a.nivo-nextNav{background-position:-30px 0;right:15px;}
 .slider-wrapper a.nivo-prevNav{left:15px;}
 .slider-wrapper .nivo-caption{font-family:'Open Sans',Helvetica,sans-serif;background:rgba(0, 0, 0, 0.2);text-align:center;text-shadow:0 0 4px #111;}
